--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
   <!-- <mat-grid-list cols="1" rowHeight="2:1" gutterSize="16px"
   [cols]="getResponsiveCols()">
   <mat-grid-tile *ngFor="let post of paginatedPosts" >
@@ -15,5 +14,19 @@
 (page)="onPageChange($event)">
 </mat-paginator> -->
 <!-- <app-reactiveform></app-reactiveform> -->
- 
-<router-outlet></router-outlet>
+
+<div class="container">
+  <div class="nav-bar"  >
+   <a href="javascript:void(0)"
+   *ngFor="let item of navitems"
+   (click)="redirect(item.path)">
+      {{ item?.data?.name }}
+   </a>
+
+  </div>
+  <div class="col-md-12">
+    
+  <router-outlet></router-outlet>
+   
+  </div>
+</div>
